added location manger class and test locations in the simuator

--- a/MovieFlexApp/MovieFlexApp/Info.plist
+++ b/MovieFlexApp/MovieFlexApp/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>we want your location to show near by cinima and movies thetears arround your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>we want your location to show near by cinima and movies thetears arround your location</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -27,6 +31,10 @@
 	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<dict/>
 	<key>UIRequiredDeviceCapabilities</key>
