feature: added imageUpload and download url

--- a/MovieFlexApp/MovieFlexApp/Info.plist
+++ b/MovieFlexApp/MovieFlexApp/Info.plist
@@ -6,6 +6,10 @@
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>NSCameraUsageDescription</key>
+	<string>we want to access your camera to take photos for create images</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>we want to access your gallery for profile and chat photos</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
